objects/DFSurvey__c.object
<CustomObject>
    <fields>
        <fullName>Years_At_Dreamforce__c</fullName>
        <label>Years At Dreamforce</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_Using_Apex__c</fullName>
        <label>Years Using Apex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_Using_Flex__c</fullName>
        <label>Years Using Flex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_Using_Salesforce__c</fullName>
        <label>Years Using Salesforce</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_Using_Visualforce__c</fullName>
        <label>Years Using Visualforce</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DFSurvey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DFSurvey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DFSurvey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>